--- a/style.css
+++ b/style.css
@@ -76,9 +76,10 @@ body{
 .controls{
 	display: flex;
 	padding: 30px ;
-  width: 100%
-	justify-content:space-between;
+  width: 100%;
+  justify-content:space-between;
 }
+
 .singlecontrol{
   padding: 30px ;
   width: 100%;
@@ -147,7 +148,7 @@ hr{
   background: #9251F7;
   color: white;
 }
-}
+
 .slider:checked~.mycontent{
    animation: check 0.4s linear forwards;
     left: -100%;
