padding for summary and added semi column in controls

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body{
     font-weight: bold;
 }
 .summary{
+  padding-top: 5%;
    color: grey;
    text-align: center;
   justify-content: center;
@@ -76,7 +77,7 @@ body{
 .controls{
 	display: flex;
 	padding: 30px ;
-  width: 100%
+  width: 100%;
 	justify-content:space-between;
 }
 .singlecontrol{
@@ -147,7 +148,7 @@ hr{
   background: #9251F7;
   color: white;
 }
-}
+
 .slider:checked~.mycontent{
    animation: check 0.4s linear forwards;
     left: -100%;
