--- a/internz.webflow/css/internz.webflow.css
+++ b/internz.webflow/css/internz.webflow.css
@@ -824,15 +824,15 @@
 }
 
 @font-face {
-  font-family: 'Glacial indifference';
-  src: url('../fonts/GlacialIndifference-Bold.ttf') format('truetype');
+  font-family: 'poppins';
+  src: url('../fonts/poppins-Bold.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: 'Glacial indifference';
-  src: url('../fonts/GlacialIndifference-Regular.ttf') format('truetype');
+  font-family: 'poppins';
+  src: url('../fonts/poppins-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
