--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ input[type="radio"]:checked:after {
   transition: all 0.3s ease;
 }
 .form-inner form .field input:focus{
-  border-color:#9251F7;
+  border-color:#9251f7;
 ;
   /* box-shadow: inset 0 0 3px #fb6aae; */
 }
@@ -619,7 +619,7 @@ align-items: left;
 align-items: center;
  margin-right: 10px;
  width: 20%;
- background-color: #8080ff;
+ background-color: #9251f7;
 }
 .buttonactive img{
  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(114deg) brightness(104%) contrast(101%);
@@ -631,7 +631,7 @@ align-items: center;
 .button:hover{
   display: grid;
   color: white;
-  background-color: #8080ff;
+  background-color: #9251f7;
   padding: 10px;
 }
 .button:hover img{
@@ -644,7 +644,7 @@ align-items: center;
   color: white;
   display: grid;
   padding: 10px;
-  background-color: #8080ff;
+  background-color: #9251f7;
 }
 .icon{
  display: flex;
