--- a/style.css
+++ b/style.css
@@ -65,12 +65,19 @@ body{
     color: Black;
     font-weight: bold;
 }
+
 .summary{
    color: grey;
    text-align: center;
   justify-content: center;
   align-items: center;
  
+}
+.foodSec{
+  color: rgb(3, 3, 3);
+  text-align: center;
+ justify-content: center;
+ align-items: center;
 
 }
 .controls{
