--- a/style.css
+++ b/style.css
@@ -778,7 +778,7 @@ background:purple;
 .insightPics{
   position: absolute;
   left:65%;
-  bottom:0%;
+  top:25%;
 }
 .contentwrap{
   display: flex;
