--- a/style.css
+++ b/style.css
@@ -778,7 +778,7 @@ background:purple;
 .insightPics{
   position: absolute;
   left:75%;
-  top:50%;
+  bottom:70%;
 }
 .contentwrap{
   display: flex;
