--- a/style.css
+++ b/style.css
@@ -775,9 +775,14 @@ background:purple;
   bottom:25%;
 }
 
-.insightPics{
+.insightFoodPic{
   position: absolute;
   left:75%;
+  bottom:70%;
+}
+.insightFitnessPic{
+  position: absolute;
+  left:85%;
   bottom:70%;
 }
 .contentwrap{
