--- a/style.css
+++ b/style.css
@@ -867,4 +867,9 @@ display: grid;
 #column{
   display: flex;
 }
-   
+.listdrop{
+  display: flex;
+    box-shadow: 0 30px 60px rgb(0,0,0,0.2);
+    display: none;
+
+}
